@@ -40,9 +40,6 @@ protected:
                           const fixed speed, const Angle bearing,
                           const fixed alt, const fixed baroalt, const fixed t);
 
-  virtual bool ScanBuffer(const TCHAR* buffer, fixed &Time, fixed &Latitude,
-                          fixed &Longitude, fixed &Altitude,
-                          fixed &PressureAltitude);
 private:
   PeriodClock clock;
 };
